@@ -38,9 +38,9 @@ public class JmrixConfigPaneXml extends AbstractXmlAdapter {
         String adapter = ConfigXmlManager.adapterName(oprime);
         log.debug("forward to " + adapter);
         try {
-            XmlAdapter x = (XmlAdapter) Class.forName(adapter).newInstance();
+            XmlAdapter x = (XmlAdapter) Class.forName(adapter).getDeclaredConstructor().newInstance();
             return x.store(oprime);
-        } catch (ClassNotFoundException | IllegalAccessException | InstantiationException e) {
+        } catch (ClassNotFoundException | IllegalAccessException | InstantiationException | NoSuchMethodException | java.lang.reflect.InvocationTargetException e) {
             log.error("Exception: ", e);
             return null;
         }
